k3d/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-k3d-demo-deployment
  labels:
    app: spring-k3d-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-k3d-demo
  template:
    metadata:
      labels:
        app: spring-k3d-demo
    spec:
     containers:
        - name: spring-k3d-demo
          image: k3d-myregistry.localhost:5111/spring-k3d-demo
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
                path: /actuator/health
                port: 8080
            initialDelaySeconds: 40
            timeoutSeconds: 2
            periodSeconds: 3
            failureThreshold: 2
          livenessProbe:
            httpGet:
                path: /actuator/health
                port: 8080
            initialDelaySeconds: 100
            timeoutSeconds: 2
            periodSeconds: 8
            failureThreshold: 1
