k3d/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-k3d-demo-service
spec:
  type: ClusterIP
  selector:
    app: spring-k3d-demo
  ports:
    - port: 8080
      targetPort: 8080
