k3d/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-k3d-demo-ingress
spec:
  rules:
  - host: myapp.localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: spring-k3d-demo-service
            port:
              number: 8080
